<resources>
    <string name="app_name">Be Beauty</string>
    <string name="scan_product_barcode">Zeskanuj kod kreskowy produktu</string>
    <string name="find_product">Wyszukaj produkt</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="product_name">Nazwa produktu:</string>
    <string name="product_manufacturer">Producent:</string>
    <string name="average_score">Ocena:</string>
    <string name="product_description">Opis:</string>
    <string name="add_comment">Dodaj komentarz</string>
    <string name="score">Ocena:</string>
    <string name="comment_value">Treść</string>
    <string name="barcode">Kod kreskowy</string>
    <string name="or_choose_category">Lub wybierz kategorię:</string>
    <string name="add_ingredients">Dodaj składniki</string>
    <string name="save_product">Zapisz produkt!</string>
    <string name="nick">Nick</string>
    <string name="send">Wyślij</string>
    <string name="type_product_name">Podaj nazwę produktu:</string>
    <string name="create_product_when_not_existing">Niestety! Nie znaleziono produktu w naszej bazie! Jeżeli chcesz, możesz go dodać</string>
    <string name="category">Kategoria:</string>
    <string name="ingredients">Składniki:</string>
    <string name="insert_ingredient_name">Wprowadź nazwę składnika:</string>
    <string name="create_ingredient">Dodaj nowy składnik</string>
    <string name="name">Nazwa</string>
    <string name="create">Stwórz</string>
    <string name="effect">Działanie:</string>
    <string name="edit">Edytuj</string>
    <string name="edit_product">Edytuj produkt</string>

    <string-array name="effects">
        <item>Neutralny</item>
        <item>Pozytywny</item>
        <item>Negatywny</item>
    </string-array>
</resources>
