<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/vegan_style"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textFontWeight="400"
        android:textSize="60sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scan_barcode"
        android:padding="10dp"
        android:layout_margin="40dp"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/appName"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/scan_product_barcode"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_product"
        android:padding="10dp"
        android:layout_margin="40dp"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scan_barcode"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/find_product"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        />
</RelativeLayout>