<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/not_found_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryAccent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".CreateProduct">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5sp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10sp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="Niestety! Nie znaleziono produktu w naszej bazie!"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fragmentsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="5sp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10sp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                tools:context=".CreateProduct">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:hint="@string/product_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:hint="@string/product_manufacturer">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_manufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:hint="@string/barcode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_barcode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:hint="@string/product_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/product_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@color/colorPrimary"
                    android:dropDownWidth="wrap_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/current_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSecondaryDark"
                    android:clickable="true"
                    tools:listitem="@layout/ingredient" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:text="@string/add_ingredients"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/colorSecondaryDark" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_product"
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:text="@string/save_product"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@color/colorSecondaryDark" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </ScrollView>

</LinearLayout>