<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryAccent"
    android:orientation="vertical"
    android:padding="25sp"
    android:id="@+id/activity_add_comment"
    tools:context=".AddComment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="3sp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10sp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_comment"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragmentsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="3sp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            tools:context=".CreateProduct">

            <RatingBar
                android:id="@+id/score_value"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:numStars="5"
                android:paddingTop="10dp"
                android:progressBackgroundTint="@color/colorSecondaryAccent"
                android:progressTint="@color/colorSecondaryDark"
                android:stepSize="0.5" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20sp"
                android:layout_height="70sp"
                android:hint="@string/nick">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomInputField"
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_gravity="top"
                android:layout_marginTop="20sp"
                android:foregroundGravity="top"
                android:gravity="top"
                android:hint="@string/comment_value">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomInputField"
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send"
                android:layout_width="150sp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/send"
                android:layout_gravity="end"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:backgroundTint="@color/colorSecondaryDark" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>