<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryAccent"
    tools:context=".fragment.ProductData">

    <TextView
        android:id="@+id/product_manufacturer"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:padding="10dp"
        android:text="@string/product_manufacturer"
        android:textColor="@android:color/black"
        android:textFontWeight="0"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/manufacturer_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_manufacturer"
        android:fontFamily="@font/roboto"
        android:padding="10dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/product_score"
        android:layout_width="100dp"
        android:layout_height="70sp"
        android:gravity="center"
        android:layout_below="@id/manufacturer_value"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:padding="10dp"
        android:text="@string/average_score"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <RatingBar
        android:id="@+id/score_value"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:layout_below="@id/manufacturer_value"
        android:layout_toEndOf="@+id/product_score"
        android:numStars="5"
        android:paddingTop="10dp"
        android:progressBackgroundTint="@color/colorAccent"
        android:progressTint="@color/colorPrimary"
        android:stepSize="0.5"
        android:isIndicator="true" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_value"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:padding="10dp"
        android:text="@string/product_description"
        android:textColor="@android:color/black"
        android:textFontWeight="0"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/description_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:fontFamily="@font/roboto"
        android:padding="10dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</RelativeLayout>